k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo
  namespace: demo
  labels:
    app: cicd-demo
    component: backend
    tier: application
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 3000
    protocol: TCP
    name: metrics
  selector:
    app: cicd-demo
  sessionAffinity: None
